# openvehiclepassport

./: .gitignore  CHANGELOG.md  CNAME  README.md  _config.yml  index.md
conformance/: README.md
conformance/fixtures/: e39-passport.input.ndjson
docs/: ARCHITECTURE.md  DISCOVERY.md  EVENTS.md  IDENTIFIERS.md  MANIFESTO.md  ROADMAP.md  TRUST.md  VISION.md
reference/python/: README.md  ovpf.py  ovpf_core.py  pyproject.toml  qr.py  sync.py  test_ovpf.py
spec/: OVPF.md
spec/context/v0.1/: ovpf.context.jsonld
spec/schema/v0.1/: envelope.schema.json
