[project]
name = "ovpf"
version = "0.1.0"
description = "Reference implementation of the OVPF event envelope: canonicalization, hashing, seal/verify/merge, and the fold to derived state."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
qr = ["segno"]

[project.scripts]
ovpf = "ovpf:main_cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ovpf", "ovpf_core", "qr"]
